<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DettaglioLibroScopri">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/beige">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFE3D3"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/back_icon" />
            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/copertina"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:background="@drawable/box_libro_dettaglio"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_launcher_background" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/beige">

                <TextView
                    android:id="@+id/titolo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/lora_bold_italic"
                    android:padding="20dp"
                    android:paddingTop="10dp"
                    android:text="TITOLO"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/autore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/lora_bold_italic"
                    android:padding="8dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="8dp"
                    android:text="Autore"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/buttonAggiungi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/red"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/lora_bold_italic"
                    android:textColor="@color/beige"
                    android:text="AGGIUNGI" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lora_bold_italic"
                    android:textColor="@color/gray"
                    android:padding="7dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="Descrizione:" />

                <TextView
                    android:id="@+id/descrizione"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:padding="7dp"
                    android:paddingStart="18dp"
                    android:paddingEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</FrameLayout>
</layout>