...
                        android:layout_marginStart="37dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="37dp"
                        android:queryHint="Cerca"
                        android:theme="@style/ThemeOverlay.AppCompat.Light"
                        android:background="@drawable/rounded_searchview_background"
                        app:layout_constraintBottom_toTopOf="@+id/buttonPerTe"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <Button
...
                        android:fontFamily="@font/lora_bold_italic"
                        android:text="GENERI :"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textColor="#B46060"
                        android:textSize="20dp"
                        app:layout_constraintBottom_toTopOf="@+id/button3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.069"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
...

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <ImageButton
                                android:id="@+id/book_in_c1"
                                android:layout_width="88dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginStart="30dp"
                                android:layout_marginEnd="35dp"
                                android:background="?attr/selectableItemBackgroundBorderless"
...
