...
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

                <ImageButton
                    android:id="@+id/backbuttonGen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="30dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:srcCompat="@drawable/back_icon" />
...
                android:gravity="center"
                android:text="Storia"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lista_libri_scopri_genere"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

...
