<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/catalogoPulsante"
        android:title="Catalogo"
        android:icon="@drawable/catalogo_icon"/>
    <item
        android:id="@+id/scopriPulsante"
        android:title="Scopri"
        android:icon="@drawable/scopri_icon"/>
    <item
        android:id="@+id/impostazioniPulsante"
        android:title="Impostazioni"
        android:icon="@drawable/impostazioni_icon"/>

</menu>